# server/src/routes.ts
@@ -17,6 +17,7 @@ import {
 import {
   searchEntitiesHandlers,
   createEntityHandlers,
+  searchEntityTagsHandlers,
   getEntityByIdHandlers,
   updateEntityByIdHandlers,
   deleteEntityByIdHandlers,
@@ -52,6 +53,7 @@ const app = new Hono()
   )
   .post('/api/v1/entities', ...searchEntitiesHandlers)
   .put('/api/v1/entities', ...createEntityHandlers)
+  .get('/api/v1/entities/tags', ...searchEntityTagsHandlers)
   .get('/api/v1/entities/:entityId', ...getEntityByIdHandlers)
   .post('/api/v1/entities/:entityId', ...updateEntityByIdHandlers)
   .delete('/api/v1/entities/:entityId', ...deleteEntityByIdHandlers)
